fix: downgrade to Spring Boot 3.3.6 and remove Lombok for local model compatibility
- Downgrade from Spring Boot 3.4.10 to 3.3.6 to fix local model HTTP client timeout issues
- Remove Lombok dependency completely (18 Java files updated with manual getters/setters)
- Add Tomcat timeout configurations (30s connection, 60s async)
- Simplify Application.java model routing logic
- Add dynamic MCP client manager for graceful startup when MCP servers are offline
- Add comprehensive Spring Boot 3.4.x incompatibility documentation

Spring Boot 3.4.x has HTTP client timeout issues with local embedding/chat models
(LM Studio, Ollama, llama.cpp). Requests hang indefinitely despite server being responsive.
Spring Boot 3.3.6 works perfectly with identical configuration.

Lombok removed to avoid Java 21 + maven-compiler-plugin compatibility issues
(ExceptionInInitializerError: com.sun.tools.javac.code.TypeTag). IMC-chatbot pattern
uses plain Java without Lombok.

Tested: RAG queries now complete in ~5 seconds with local models (qwen3-4b, nomic-embed).

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>